--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "config": "^1.20.4",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "node-fetch": "^1.6.3",
+    "node-uuid": "^1.4.7",
     "node-wit": "^4.1.0",
     "request": "^2.75.0"
   },
